# etch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  complete-system-architecture.md  docker-compose.external-echokit.yml  docker-compose.storage.yml  docker-compose.yml  package-lock.json  smart-speaker-sequence-diagram.md  start.sh  test-echokit-health.sh  test-healthcheck-commands.sh  test_storage_simple.py  verify-deployment.sh  verify-echokit-healthcheck.sh  web-management-tech-stack-recommendation.md
.github/workflows/: test.yml  test_optimized.yml
api-gateway/: .env.example  Cargo.toml  Dockerfile
api-gateway/.sqlx/: query-2205e777634dbb14c34c76b387e6b7c9d65660b68fad4b22fc647eb69f15153a.json  query-61f9cfb0e7bb0fd307609e709f411b9876a1b1db9c4cfbfff5d47717c26d8ea4.json  query-82c0fbd1dd2a62687791c587e42cb0c8c523e3ac13e88bebd905ec1397e20e9a.json  query-meta.json
api-gateway/migrations/: 003_create_sessions_table.sql
api-gateway/scripts/: generate-sqlx-cache.sh
api-gateway/shared_temp/shared/src/: cache.rs  types.rs
api-gateway/src/: app_state.rs  auth.rs  cache.rs  database.rs  database_old.rs  device_service.rs  handlers_simple.rs  main.rs  main_minimal.rs  main_simple.rs  middleware.rs  models.rs  mqtt.rs  mvp_demo.rs  session.rs  storage.rs  storage_test.rs  user_service.rs  utils.rs  websocket.rs
api-gateway/src/handlers/: auth.rs  devices.rs  echokit_servers.rs  health.rs  mod.rs  sessions.rs  users.rs
api-gateway/src/models/: device.rs  session.rs  user.rs
api-gateway/src/mqtt/: client.rs  handlers.rs
api-gateway/src/utils/: response.rs  validation.rs
bridge/: .env.example  Cargo.toml  Dockerfile  start_test.sh  stop_test.sh
bridge/.sqlx/: query-07d40f5881d7d8387d7475a0d20953118b4dca1e53969cc0aa8443b879c514e9.json  query-26970616531562bf36edba29e7decc4738328ffce4a8c52ebed79cf5a9925949.json  query-4e13049d1feb84ab92a2d69d43af5dc9db2f328446e7a3d92a7a22b2ebc4c2c1.json  query-650e1516d11936a010f4ce08661abdea73047dd0780a6355e341e205e3cb6072.json  query-ce672cc8ce8d2830d5b6f852f8f9938830cf50bbe521c25583727a60667b463b.json
bridge/docs/: DEMO_GUIDE.md  VOICE_INTERACTION_SEQUENCE.md
bridge/resources/: bridge_webui.html  echokit_webui.html  index_zh_test.html
bridge/shared_temp/shared/src/: lib.rs
bridge/shared_temp/src/: database.rs
bridge/src/: api_handlers.rs  audio_processor.rs  bridge_simple_test.rs  bridge_storage_test.rs  echokit_client.rs  main.rs  mqtt_client.rs  session_service.rs  session_service_simple.rs  udp_server.rs
bridge/src/audio/: mod.rs
bridge/src/echokit/: connection_pool.rs  mod.rs  websocket_adapter.rs
bridge/src/mqtt/: mod.rs
bridge/src/session/: mod.rs
bridge/src/websocket/: audio_handler.rs  connection_manager.rs  flow_control.rs  heartbeat.rs  mod.rs  protocol.rs  session_manager.rs
database/init/: 01-init-database.sql
docs/: DEVICE_BATTERY_LEVEL_MECHANISM.md  MULTI_TURN_CONVERSATION_DESIGN.md  PORT_CONFIGURATION.md  SYSTEM_DESIGN.md
docs/archived/: README.md
docs/archived/api-gateway-migrations-unused/: 001_create_users_table.sql  002_create_devices_table.sql  README.md
docs/archived/api-gateway-scripts-unused/: README.md
docs/archived/migrations-unused/: 001_create_initial_tables.sql  005_add_echokit_server_url_to_devices.sql  verify_sessions_schema.sql
echo-web-management/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
echo-web-management/src/: App.css  App.tsx  index.css
echokit/: 01-echokit_data_flow.md  02-echokit_http_performance_analysis.md  03-echokit_vad_http_analysis.md
echokit-server-deployment/: start.sh
migrations/: 001_create_sessions_table.sql  001_update_device_id_format.sql  002_device_registration.sql  002_safe_device_id_update.sql  002_update_sessions_schema.sql  003_create_echokit_servers_table.sql  004_update_echokit_servers_remove_status.sql  006_make_echokit_server_url_required.sql  fix_overlapping_sessions.sql  test_sessions_performance.sql
mosquitto/: mosquitto.conf
scripts/: download-echokit-server.sh  start.sh  verify-deployment.sh  verify_database_schema.sh
shared/: Cargo.toml  Dockerfile
shared/src/: config.rs  database.rs  lib.rs  mqtt.rs  types.rs  utils.rs
tests/echokit-server/: config.toml.template  docker-compose.echokit.yml  docker-compose.llamaedge.yml  generate-config.sh  test-echokit.sh
tests/integration/: README.md  run_all_tests.sh  test_api_storage_integration.sh  test_bridge_echokit_integration.sh  test_web_api_integration.sh  verify_tests.sh
(+21 files in other folders)
