[package]
name = "echo-api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Echo System Team"]
description = "API Gateway for Echo Smart Speaker System"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Authentication & Authorization
jsonwebtoken = "9.2"
bcrypt = "0.15"

# MQTT
rumqttc = "0.24"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
futures-util = "0.3"
futures = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async
tokio-stream = "0.1"

# Random
rand = "0.8"

# Shared library
echo-shared = { path = "../shared" }

[[bin]]
name = "echo-api-gateway"
path = "src/main.rs"

[[bin]]
name = "mvp_demo"
path = "src/mvp_demo.rs"

[dev-dependencies]
tempfile = "3.8"