[package]
name = "echo-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Echo System Team"]
description = "Bridge Service for Echo Smart Speaker System"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# MQTT
rumqttc = "0.24"

# Audio processing
opus = "0.3"
byteorder = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Networking
socket2 = "0.5"

# Async utilities
tokio-stream = "0.1"
dashmap = "5.5"

# Shared library
echo-shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.8"