[package]
name = "echo-shared"
version = "0.1.0"
edition = "2021"
authors = ["Echo System Team"]
description = "Shared types and utilities for Echo Smart Speaker System"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# gRPC definitions
prost = "0.12"
tonic = "0.11"

# JWT
jsonwebtoken = "9.2"

# Password hashing
bcrypt = "0.15"

# Regular expressions
regex = "1.10"

# System info
num_cpus = "1.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Async traits
async-trait = "0.1"